add basic endpoint for authentication
