# routes/api.php
@@ -15,12 +15,12 @@ $api->version('v1', function (Router $api) {
     });
 
     $api->group(['middleware' => 'jwt.auth'], function(Router $api) {
+        $api->get('hello', 'App\\Api\\V1\\Controllers\\HelloController@hello');
         $api->get('protected', function() {
             return response()->json([
                 'message' => 'Access to this item is only for authenticated user. Provide a token in your request!'
             ]);
         });
-
         $api->get('refresh', [
             'middleware' => 'jwt.refresh',
             function() {
@@ -28,12 +28,6 @@ $api->version('v1', function (Router $api) {
                     'message' => 'By accessing this endpoint, you can refresh your access token at each request. Check out this response headers!'
                 ]);
             }
-        ]);
-    });
-
-    $api->get('hello', function() {
-        return response()->json([
-            'message' => 'This is a simple example of item returned by your APIs. Everyone can see it.'
         ]);
     });
 });
